# where-have-i-been

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  angular.json  docker-compose.yaml  example.env  nginx.conf  package-lock.json  package.json
.github/workflows/: angular-ci.yaml  nginx-ci.yaml  rust-ci.yaml
src/: index.html
src/app/: app.component.spec.ts  app.component.ts  heatmap.service.ts  track.service.ts
wherehaveibeen-ng/: .gitignore  Cargo.toml
wherehaveibeen-ng/src/: main.rs
wherehaveibeen-ng/src/database/: heatmap.rs  mod.rs  tracks.rs  tracks_database.rs
wherehaveibeen-ng/src/files/: files.rs  fit.rs  gpx.rs  gz.rs  mod.rs
wherehaveibeen-ng/src/handlers/: heatmap.rs  tracks.rs
wherehaveibeen-ng/src/model/: coordinate.rs  heatmap.rs  mod.rs  track.rs
wherehaveibeen-ng/src/routes/: mod.rs  tracks.rs
wherehaveibeen-ng/src/utils/: cache_utils.rs  environment.rs  file_utils.rs  gpx_utils.rs  mod.rs
wherehaveibeen-nginx/: Dockerfile  nginx.conf  ssl.conf
wherehaveibeen-rs/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
wherehaveibeen-rs/src/: main.rs
wherehaveibeen-rs/src/database/: heatmap.rs  mod.rs  tracks.rs
wherehaveibeen-rs/src/database/query/: heatmap.rs  mod.rs  track.rs
wherehaveibeen-rs/src/files/: fit.rs  gpx.rs  gz.rs
wherehaveibeen-rs/src/handlers/: heatmap.rs  tracks.rs
wherehaveibeen-rs/src/model/: track.rs  trackpoint.rs
wherehaveibeen-rs/src/routes/: heatmap.rs  tracks.rs
wherehaveibeen-rs/src/utils/: activity_type.rs  api_response.rs  api_utils.rs  environment.rs  mod.rs
(+19 files in other folders)
