[package]
name = "wherehaveibeen-ng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
fitparser = "0.7.0"
quick-xml = { version = "0.36.1", features = ["serde", "serialize"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread"] }
